--- a/lesson-3/homework/list.ipynb
+++ b/lesson-3/homework/list.ipynb
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "4f24d398",
    "metadata": {},
    "outputs": [
@@ -322,16 +322,18 @@
    ],
    "source": [
     "\n",
-    "numbers = [2, 1, 5, 6, 6, 3, 4, 5]\n",
+    "# Given list of integers\n",
+    "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
     "\n",
+    "# Initialize an empty list to store odd numbers\n",
+    "odd_numbers = []\n",
     "\n",
-    "even_count = 0\n",
+    "# Iterate through the original list and add odd numbers to the new list\n",
+    "for num in numbers:\n",
+    "    if num % 2 != 0:\n",
+    "        odd_numbers.append(num)\n",
     "\n",
-    "for number in numbers:\n",
-    "    if number % 2 == 0:\n",
-    "        even_count += 1\n",
-    "\n",
-    "print(even_count)\n"
+    "print(odd_numbers)  # Output: [1, 3, 5, 7, 9]\n"
    ]
   },
   {
@@ -785,7 +787,21 @@
    "id": "9d418970",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "# Given list of integers\n",
+    "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "\n",
+    "# Initialize an empty list to store odd numbers\n",
+    "odd_numbers = []\n",
+    "\n",
+    "# Iterate through the original list and add odd numbers to the new list\n",
+    "for num in numbers:\n",
+    "    if num % 2 != 0:\n",
+    "        odd_numbers.append(num)\n",
+    "\n",
+    "print(odd_numbers) "
+   ]
   },
   {
    "cell_type": "code",
