--- a/lesson-11/homework/workin_with_databases.ipynb
+++ b/lesson-11/homework/workin_with_databases.ipynb
@@ -348,10 +348,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "id": "dc16aab4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('1984', 'George Orwell', 1950, 'Dystopian')\n"
+     ]
+    }
+   ],
    "source": [
     "import sqlite3\n",
     "\n",
@@ -359,17 +367,55 @@
     "CREATE TABLE IF NOT EXISTS Books (\n",
     "    Title TEXT, \n",
     "    Author TEXT, \n",
-    "    AgeYear_Published INT, \n",
+    "    Year_Published INT, \n",
     "    Genre TEXT\n",
     "    );\n",
     "\n",
-    "-- Insert initial data\n",
-    "INSERT INTO Books (Title, Author, AgeYear_Published, Genre ) VALUES \n",
+    "\n",
+    "INSERT INTO Books (Title, Author, Year_Published, Genre ) VALUES \n",
     "('To Kill a Mockingbird', 'Harper Lee', 1960, 'Fiction'),\n",
-    "('1984', 'George Orwell', 3\t19490), \n",
-    "('Kira Nerys', 'Bajoran', 29);\n",
-    "\"\"\""
+    "('1984', 'George Orwell', 1949, 'Dystopian'), \n",
+    "('The Great Gatsby', 'F. Scott Fitzgerald', 1925, 'Classic');\n",
+    "\"\"\"\n",
+    "delete=\"\"\"\n",
+    "    DELETE FROM Books WHERE Year_Published<1950\n",
+    "    \"\"\"\n",
+    "update=\"\"\"\n",
+    "    ALTER TABLE Books ADD COLUMN Rating;\n",
+    "\n",
+    "\"\"\"\n",
+    "with sqlite3.connect('library.db') as file:\n",
+    "    cursor=file.cursor()\n",
+    "    cursor.executescript(sql)\n",
+    "    \n",
+    "    cursor.execute(\"UPDATE Books SET Year_Published=1950 WHERE Year_Published=1949 \")\n",
+    "    \n",
+    "    cursor.execute(\"SELECT * FROM Books Where Genre='Dystopian'\")\n",
+    "    for row in cursor.fetchall():\n",
+    "        print(row)\n",
+    "    cursor.execute(delete)\n",
+    "    cursor.execute(update)\n",
+    "    cursor.execute(\"UPDATE Books SET Rating=4.8 WHERE Title='To Kill a Mockingbird'\")\n",
+    "    cursor.execute(\"UPDATE Books SET Rating=4.7 WHERE Title='1984'\")\n",
+    "    cursor.execute(\"UPDATE Books SET Rating=4.5 WHERE Title='The Great Gatsby'\")\n",
+    "    \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8e48a44",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f10079a0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
