--- a/lesson-13/homework/lesson-13_homework.ipynb
+++ b/lesson-13/homework/lesson-13_homework.ipynb
@@ -150,24 +150,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "id": "063aea34",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean value is 49.0\n"
-     ]
+     "data": {
+      "text/plain": [
+       "np.float64(48.96666666666667)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "a=np.random.randint(0, 100, size=(3, 10))\n",
-    "b=a.max()\n",
-    "c=a.min()\n",
-    "d=(b+c)/2\n",
-    "print(f'Mean value is {d}')\n",
+    "a.mean()\n",
+    "\n",
+    "\n",
     "\n",
     "\n"
    ]
@@ -285,17 +287,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "id": "53b000c8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(581931.631167817)"
+       "np.float64(-28742.629109684964)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "b12d19c7",
    "metadata": {},
    "outputs": [
