--- a/lesson-3/homework/lesson.ipynb
+++ b/lesson-3/homework/lesson.ipynb
@@ -8,7 +8,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "415d7a5f",
    "metadata": {},
    "outputs": [
@@ -18,7 +18,7 @@
        "['apple', 'banana', 'apple', 'apple']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "90dae5fd",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,7 @@
        "3"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "76081a07",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
        "['apple', 'banana', 'apple', 'apple', 'melon', 'ananas']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "f95d6e87",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
        "2"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "27f9b11e",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
        "'ananas'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,17 +116,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "79b22fee",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['apple', 'banana', 'apple', 'apple', 'melon']"
+       "['melon', 'apple', 'apple', 'banana']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,17 +158,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "3a69582b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['apple', 'banana', 'apple', 'apple']"
+       "['melon', 'apple', 'apple', 'banana']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "5fed34ff",
    "metadata": {},
    "outputs": [],
@@ -189,17 +189,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "304e87e6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['apple', 'apple']"
+       "['banana', 'apple', 'apple', 'melon']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "6c6f3ea3",
    "metadata": {},
    "outputs": [],
@@ -518,31 +518,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2b580cc",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'tuple' object does not support item assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[34], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43ma\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "9683b693",
    "metadata": {},
    "outputs": [],
    "source": [
-    "peroson=('john', 'doe', 17)\n",
+    "person1=('john', 'doe', 17)\n",
     "\n",
     "person2=('hello', 'code', 12)\n"
    ]
@@ -570,24 +550,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "id": "750bd573",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tuple"
+       "(6, 2)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "res=divmod(20, 3)\n",
-    "type(res)"
+    "res"
    ]
   },
   {
@@ -698,7 +678,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
