--- a/lesson-3/homework/list.ipynb
+++ b/lesson-3/homework/list.ipynb
@@ -156,24 +156,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "8a885e7b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 2, 3]"
+       "[4, 5]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "numbers = [1, 2, 3, 4, 5]\n",
-    "numbers[:3]"
+    "numbers[3:]"
    ]
   },
   {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "88de73bd",
    "metadata": {},
    "outputs": [
@@ -346,6 +346,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "1\n",
+      "5\n",
+      "3\n",
+      "5\n",
       "4\n"
      ]
     }
@@ -359,6 +363,7 @@
     "\n",
     "for number in numbers:\n",
     "    if number % 2 != 0:\n",
+    "        print(number)\n",
     "        odd_count += 1\n",
     "\n",
     "print(odd_count)\n"
@@ -411,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "id": "f7afc24f",
    "metadata": {},
    "outputs": [
@@ -432,6 +437,34 @@
     "    index=numbers.index(old_value)\n",
     "    numbers[index]=new_value\n",
     "    print(numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ae4a9ff6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 42, 42, 3, 3, 1, 3, 4, 4, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "numbers = [1,2 , 3, 42, 42, 3, 4,1, 3,4 ,4 ,2]\n",
+    "old_value=4\n",
+    "new_value=3\n",
+    "if old_value in numbers:\n",
+    "   \n",
+    "    index=numbers.index(old_value)\n",
+    "    numbers[index]=new_value\n",
+    "    print(numbers)\n",
+    "    "
    ]
   },
   {
@@ -814,7 +847,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
