--- a/lesson-3/homework/set.ipynb
+++ b/lesson-3/homework/set.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "3bff4bc1",
    "metadata": {},
    "outputs": [
@@ -19,7 +19,7 @@
    ],
    "source": [
     "a={1, 2, 3, 4, 5}\n",
-    "b={4, 3, 5, 6, 7,8,3 }\n",
+    "b={4, 3, 5, 6, 7,8,3}\n",
     "ste_union= a | b\n",
     "ste_union\n"
    ]
@@ -50,17 +50,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "d9636afd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{1, 2}"
+       "{6, 7, 8}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,30 +68,30 @@
    "source": [
     "a={1, 2, 3, 4, 5}\n",
     "b={4, 3, 5, 6, 7,8,3 }\n",
-    "difference= a-b\n",
+    "difference= b-a\n",
     "difference\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "746dbc70",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "a={1, 2, 3, 4, 5}\n",
-    "b={4, 3, 5, 6, 7,8,3 }\n",
+    "b={1, 2, 3, 4, 5,8,3 }\n",
     "is_subset=a.issubset(b)\n",
     "is_subset"
    ]
@@ -233,31 +233,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "edeea2b7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{6, 7}"
+       "{6, 7, 8}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "a={1, 2, 3, 4, 5}\n",
-    "b={1, 3, 4, 2, 4, 2,4 ,5, 5, 6, 6,7 ,7 }\n",
+    "b={1, 3, 4, 2, 4, 2,4 ,5, 5, 6, 6,7 ,7 , 8}\n",
     "difference= a^b\n",
     "difference"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "b637ac3e",
    "metadata": {},
    "outputs": [
@@ -276,7 +276,7 @@
     "    a.add(element)\n",
     "    print(f'{element} is added')\n",
     "else:\n",
-    "    prrit(f'{element} is already in set')"
+    "    print(f'{element} is already in set')"
    ]
   },
   {
@@ -558,7 +558,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
