--- a/lesson-3/homework/tuple.ipynb
+++ b/lesson-3/homework/tuple.ipynb
@@ -34,22 +34,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "32415ce8",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "tup = (1, 2, 3, 4, 5)\n",
-    "min_element = min(tup)\n",
-    "print(min_element)\n"
+    "min(tup)\n",
+    "\n"
    ]
   },
   {
@@ -492,7 +495,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
